remote exp refractor